// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartScreen renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Object {
            "backgroundColor": "#fff",
            "flex": 1,
          }
    }
>
    <OrderList
        onAddOrder={[Function]}
        onRemoveOrder={[Function]}
        orders={Array []}
    />
    <View
        style={
            Object {
                "backgroundColor": "#fff",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 16,
                "paddingHorizontal": 27,
                "paddingTop": 27,
                "position": "absolute",
                "right": 0,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 10,
                  "width": 0,
                },
                "shadowOpacity": 0.5,
                "shadowRadius": 24,
              }
        }
    >
        <View
            style={
                Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginBottom": 22,
                  }
            }
        >
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "color": "#7f7f7f",
                        "fontSize": 16,
                        "marginRight": 11,
                      }
                }
            >
                Order Total:
            </Text>
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "flex": 1,
                        "fontSize": 16,
                      }
                }
            >
                0
                 items
            </Text>
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "fontSize": 20,
                      }
                }
            >
                $
                0
            </Text>
        </View>
        <Button
            buttonStyle={
                Object {
                    "backgroundColor": "#000",
                    "paddingVertical": 14,
                  }
            }
            containerViewStyle={
                Object {
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
            }
            textStyle={
                Object {
                    "fontSize": 13,
                  }
            }
            title="CONFIRM ORDER"
        />
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                }
      }
>
      <OrderList
            onAddOrder={[Function]}
            onRemoveOrder={[Function]}
            orders={Array []}
      />
      <View
            style={
                  Object {
                        "backgroundColor": "#fff",
                        "bottom": 0,
                        "left": 0,
                        "paddingBottom": 16,
                        "paddingHorizontal": 27,
                        "paddingTop": 27,
                        "position": "absolute",
                        "right": 0,
                        "shadowColor": "#000",
                        "shadowOffset": Object {
                          "height": 10,
                          "width": 0,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 24,
                      }
            }
      >
            <View
                  style={
                        Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "marginBottom": 22,
                            }
                  }
            >
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "color": "#7f7f7f",
                                    "fontSize": 16,
                                    "marginRight": 11,
                                  }
                        }
                  >
                        Order Total:
                  </Text>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "flex": 1,
                                    "fontSize": 16,
                                  }
                        }
                  >
                        0
                         items
                  </Text>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "fontSize": 20,
                                  }
                        }
                  >
                        $
                        0
                  </Text>
            </View>
            <Button
                  buttonStyle={
                        Object {
                              "backgroundColor": "#000",
                              "paddingVertical": 14,
                            }
                  }
                  containerViewStyle={
                        Object {
                              "marginLeft": 0,
                              "marginRight": 0,
                            }
                  }
                  textStyle={
                        Object {
                              "fontSize": 13,
                            }
                  }
                  title="CONFIRM ORDER"
            />
      </View>
</View>,
  ],
  "options": Object {
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      },
      "_currentElement": <CartScreen
        addToCart={[Function]}
        cart={
                Object {
                        "products": Object {},
                        "totalCost": 0,
                        "totalOrders": 0,
                      }
        }
        orders={Array []}
        removeFromCart={[Function]}
        totalCost={0}
        totalOrders={0}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": CartScreen {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "addToCart": [Function],
          "cart": Object {
            "products": Object {},
            "totalCost": 0,
            "totalOrders": 0,
          },
          "orders": Array [],
          "removeFromCart": [Function],
          "totalCost": 0,
          "totalOrders": 0,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <OrderList
                    onAddOrder={[Function]}
                    onRemoveOrder={[Function]}
                    orders={Array []}
          />
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "bottom": 0,
                                        "left": 0,
                                        "paddingBottom": 16,
                                        "paddingHorizontal": 27,
                                        "paddingTop": 27,
                                        "position": "absolute",
                                        "right": 0,
                                        "shadowColor": "#000",
                                        "shadowOffset": Object {
                                          "height": 10,
                                          "width": 0,
                                        },
                                        "shadowOpacity": 0.5,
                                        "shadowRadius": 24,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "marginBottom": 22,
                                                }
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "color": "#7f7f7f",
                                                            "fontSize": 16,
                                                            "marginRight": 11,
                                                          }
                                        }
                              >
                                        Order Total:
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "flex": 1,
                                                            "fontSize": 16,
                                                          }
                                        }
                              >
                                        0
                                         items
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "fontSize": 20,
                                                          }
                                        }
                              >
                                        $
                                        0
                              </Text>
                    </View>
                    <Button
                              buttonStyle={
                                        Object {
                                                  "backgroundColor": "#000",
                                                  "paddingVertical": 14,
                                                }
                              }
                              containerViewStyle={
                                        Object {
                                                  "marginLeft": 0,
                                                  "marginRight": 0,
                                                }
                              }
                              textStyle={
                                        Object {
                                                  "fontSize": 13,
                                                }
                              }
                              title="CONFIRM ORDER"
                    />
          </View>
</View>,
        "_debugID": 4,
        "_renderedOutput": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <OrderList
                    onAddOrder={[Function]}
                    onRemoveOrder={[Function]}
                    orders={Array []}
          />
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "bottom": 0,
                                        "left": 0,
                                        "paddingBottom": 16,
                                        "paddingHorizontal": 27,
                                        "paddingTop": 27,
                                        "position": "absolute",
                                        "right": 0,
                                        "shadowColor": "#000",
                                        "shadowOffset": Object {
                                          "height": 10,
                                          "width": 0,
                                        },
                                        "shadowOpacity": 0.5,
                                        "shadowRadius": 24,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "marginBottom": 22,
                                                }
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "color": "#7f7f7f",
                                                            "fontSize": 16,
                                                            "marginRight": 11,
                                                          }
                                        }
                              >
                                        Order Total:
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "flex": 1,
                                                            "fontSize": 16,
                                                          }
                                        }
                              >
                                        0
                                         items
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "fontSize": 20,
                                                          }
                                        }
                              >
                                        $
                                        0
                              </Text>
                    </View>
                    <Button
                              buttonStyle={
                                        Object {
                                                  "backgroundColor": "#000",
                                                  "paddingVertical": 14,
                                                }
                              }
                              containerViewStyle={
                                        Object {
                                                  "marginLeft": 0,
                                                  "marginRight": 0,
                                                }
                              }
                              textStyle={
                                        Object {
                                                  "fontSize": 13,
                                                }
                              }
                              title="CONFIRM ORDER"
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CartScreen
    addToCart={[Function]}
    cart={
        Object {
            "products": Object {},
            "totalCost": 0,
            "totalOrders": 0,
          }
    }
    orders={Array []}
    removeFromCart={[Function]}
    totalCost={0}
    totalOrders={0}
/>,
}
`;

exports[`CartScreen renders correctly with products 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Object {
            "backgroundColor": "#fff",
            "flex": 1,
          }
    }
>
    <OrderList
        onAddOrder={[Function]}
        onRemoveOrder={[Function]}
        orders={
            Array [
                Object {
                  "deliveryType": "1",
                  "price": 3.49,
                  "productCode": "1",
                  "quantity": 1,
                  "thumbnail_image": "image",
                  "title": "Type 1 code 1",
                },
              ]
        }
    />
    <View
        style={
            Object {
                "backgroundColor": "#fff",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 16,
                "paddingHorizontal": 27,
                "paddingTop": 27,
                "position": "absolute",
                "right": 0,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 10,
                  "width": 0,
                },
                "shadowOpacity": 0.5,
                "shadowRadius": 24,
              }
        }
    >
        <View
            style={
                Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginBottom": 22,
                  }
            }
        >
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "color": "#7f7f7f",
                        "fontSize": 16,
                        "marginRight": 11,
                      }
                }
            >
                Order Total:
            </Text>
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "flex": 1,
                        "fontSize": 16,
                      }
                }
            >
                1
                 items
            </Text>
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "fontSize": 20,
                      }
                }
            >
                $
                3.49
            </Text>
        </View>
        <Button
            buttonStyle={
                Object {
                    "backgroundColor": "#000",
                    "paddingVertical": 14,
                  }
            }
            containerViewStyle={
                Object {
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
            }
            textStyle={
                Object {
                    "fontSize": 13,
                  }
            }
            title="CONFIRM ORDER"
        />
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                }
      }
>
      <OrderList
            onAddOrder={[Function]}
            onRemoveOrder={[Function]}
            orders={
                  Array [
                        Object {
                          "deliveryType": "1",
                          "price": 3.49,
                          "productCode": "1",
                          "quantity": 1,
                          "thumbnail_image": "image",
                          "title": "Type 1 code 1",
                        },
                      ]
            }
      />
      <View
            style={
                  Object {
                        "backgroundColor": "#fff",
                        "bottom": 0,
                        "left": 0,
                        "paddingBottom": 16,
                        "paddingHorizontal": 27,
                        "paddingTop": 27,
                        "position": "absolute",
                        "right": 0,
                        "shadowColor": "#000",
                        "shadowOffset": Object {
                          "height": 10,
                          "width": 0,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 24,
                      }
            }
      >
            <View
                  style={
                        Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "marginBottom": 22,
                            }
                  }
            >
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "color": "#7f7f7f",
                                    "fontSize": 16,
                                    "marginRight": 11,
                                  }
                        }
                  >
                        Order Total:
                  </Text>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "flex": 1,
                                    "fontSize": 16,
                                  }
                        }
                  >
                        1
                         items
                  </Text>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "fontSize": 20,
                                  }
                        }
                  >
                        $
                        3.49
                  </Text>
            </View>
            <Button
                  buttonStyle={
                        Object {
                              "backgroundColor": "#000",
                              "paddingVertical": 14,
                            }
                  }
                  containerViewStyle={
                        Object {
                              "marginLeft": 0,
                              "marginRight": 0,
                            }
                  }
                  textStyle={
                        Object {
                              "fontSize": 13,
                            }
                  }
                  title="CONFIRM ORDER"
            />
      </View>
</View>,
  ],
  "options": Object {
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      },
      "_currentElement": <CartScreen
        addToCart={[Function]}
        cart={
                Object {
                        "products": Object {
                          "1": Object {
                            "1": Object {
                              "deliveryType": "1",
                              "price": 3.49,
                              "productCode": "1",
                              "quantity": 1,
                              "thumbnail_image": "image",
                              "title": "Type 1 code 1",
                            },
                          },
                        },
                        "totalCost": 3.49,
                        "totalOrders": 1,
                      }
        }
        orders={
                Array [
                        Object {
                          "deliveryType": "1",
                          "price": 3.49,
                          "productCode": "1",
                          "quantity": 1,
                          "thumbnail_image": "image",
                          "title": "Type 1 code 1",
                        },
                      ]
        }
        removeFromCart={[Function]}
        totalCost={3.49}
        totalOrders={1}
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": CartScreen {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "addToCart": [Function],
          "cart": Object {
            "products": Object {
              "1": Object {
                "1": Object {
                  "deliveryType": "1",
                  "price": 3.49,
                  "productCode": "1",
                  "quantity": 1,
                  "thumbnail_image": "image",
                  "title": "Type 1 code 1",
                },
              },
            },
            "totalCost": 3.49,
            "totalOrders": 1,
          },
          "orders": Array [
            Object {
              "deliveryType": "1",
              "price": 3.49,
              "productCode": "1",
              "quantity": 1,
              "thumbnail_image": "image",
              "title": "Type 1 code 1",
            },
          ],
          "removeFromCart": [Function],
          "totalCost": 3.49,
          "totalOrders": 1,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <OrderList
                    onAddOrder={[Function]}
                    onRemoveOrder={[Function]}
                    orders={
                              Array [
                                        Object {
                                          "deliveryType": "1",
                                          "price": 3.49,
                                          "productCode": "1",
                                          "quantity": 1,
                                          "thumbnail_image": "image",
                                          "title": "Type 1 code 1",
                                        },
                                      ]
                    }
          />
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "bottom": 0,
                                        "left": 0,
                                        "paddingBottom": 16,
                                        "paddingHorizontal": 27,
                                        "paddingTop": 27,
                                        "position": "absolute",
                                        "right": 0,
                                        "shadowColor": "#000",
                                        "shadowOffset": Object {
                                          "height": 10,
                                          "width": 0,
                                        },
                                        "shadowOpacity": 0.5,
                                        "shadowRadius": 24,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "marginBottom": 22,
                                                }
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "color": "#7f7f7f",
                                                            "fontSize": 16,
                                                            "marginRight": 11,
                                                          }
                                        }
                              >
                                        Order Total:
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "flex": 1,
                                                            "fontSize": 16,
                                                          }
                                        }
                              >
                                        1
                                         items
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "fontSize": 20,
                                                          }
                                        }
                              >
                                        $
                                        3.49
                              </Text>
                    </View>
                    <Button
                              buttonStyle={
                                        Object {
                                                  "backgroundColor": "#000",
                                                  "paddingVertical": 14,
                                                }
                              }
                              containerViewStyle={
                                        Object {
                                                  "marginLeft": 0,
                                                  "marginRight": 0,
                                                }
                              }
                              textStyle={
                                        Object {
                                                  "fontSize": 13,
                                                }
                              }
                              title="CONFIRM ORDER"
                    />
          </View>
</View>,
        "_debugID": 8,
        "_renderedOutput": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <OrderList
                    onAddOrder={[Function]}
                    onRemoveOrder={[Function]}
                    orders={
                              Array [
                                        Object {
                                          "deliveryType": "1",
                                          "price": 3.49,
                                          "productCode": "1",
                                          "quantity": 1,
                                          "thumbnail_image": "image",
                                          "title": "Type 1 code 1",
                                        },
                                      ]
                    }
          />
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "bottom": 0,
                                        "left": 0,
                                        "paddingBottom": 16,
                                        "paddingHorizontal": 27,
                                        "paddingTop": 27,
                                        "position": "absolute",
                                        "right": 0,
                                        "shadowColor": "#000",
                                        "shadowOffset": Object {
                                          "height": 10,
                                          "width": 0,
                                        },
                                        "shadowOpacity": 0.5,
                                        "shadowRadius": 24,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "marginBottom": 22,
                                                }
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "color": "#7f7f7f",
                                                            "fontSize": 16,
                                                            "marginRight": 11,
                                                          }
                                        }
                              >
                                        Order Total:
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "flex": 1,
                                                            "fontSize": 16,
                                                          }
                                        }
                              >
                                        1
                                         items
                              </Text>
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "fontSize": 20,
                                                          }
                                        }
                              >
                                        $
                                        3.49
                              </Text>
                    </View>
                    <Button
                              buttonStyle={
                                        Object {
                                                  "backgroundColor": "#000",
                                                  "paddingVertical": 14,
                                                }
                              }
                              containerViewStyle={
                                        Object {
                                                  "marginLeft": 0,
                                                  "marginRight": 0,
                                                }
                              }
                              textStyle={
                                        Object {
                                                  "fontSize": 13,
                                                }
                              }
                              title="CONFIRM ORDER"
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CartScreen
    addToCart={[Function]}
    cart={
        Object {
            "products": Object {
              "1": Object {
                "1": Object {
                  "deliveryType": "1",
                  "price": 3.49,
                  "productCode": "1",
                  "quantity": 1,
                  "thumbnail_image": "image",
                  "title": "Type 1 code 1",
                },
              },
            },
            "totalCost": 3.49,
            "totalOrders": 1,
          }
    }
    orders={
        Array [
            Object {
              "deliveryType": "1",
              "price": 3.49,
              "productCode": "1",
              "quantity": 1,
              "thumbnail_image": "image",
              "title": "Type 1 code 1",
            },
          ]
    }
    removeFromCart={[Function]}
    totalCost={3.49}
    totalOrders={1}
/>,
}
`;
